--- a/client/package.json
+++ b/client/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "waste-management-frontend",
-  "version": "0.1.0",
+  "name": "client",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "dayjs": "^1.11.5",
-    "react": "^17.0.0",
+    "react": "^18.2.0",
     "react-date-range": "^1.4.0",
-    "react-dom": "^17.0.0",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^4.0.3",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
     "timeago.js": "^4.0.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "CI= react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.0"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
