--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "browserslist-update": "npx update-browserslist-db@latest"
   },
-  "author": "JEDolce",
+  "author": "Favour",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
